fix LangSwitcher's z-index

--- a/client/src/features/LangSwitcher/ui/LangSwitcher.module.scss
+++ b/client/src/features/LangSwitcher/ui/LangSwitcher.module.scss
@@ -32,6 +32,7 @@
   overflow: hidden;
   background-color: var(--dark-color-700);
   border: 1px solid var(--dark-color-100);
+  z-index: var(--modal-z-index);
 
   .item {
     display: flex;
